# SummarizeAI

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
summarize_ai/: __init__.py  exceptions.py  ffmpeg_handler.py  main.py  transcriber.py
